add:cuarto commit

--- a/app/views/playlists/_form.html.erb
+++ b/app/views/playlists/_form.html.erb
@@ -1,26 +1,31 @@
-<%= form_with(model: playlist, local: true) do |form| %>
-  <% if playlist.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(playlist.errors.count, "error") %> prohibited this playlist from being saved:</h2>
+<div class="row">
+  <div class="col col-md-6">
+    <%= form_with(model: playlist, local: true) do |form| %>
+      <% if playlist.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(playlist.errors.count, "error") %> prohibited this playlist from being saved:</h2>
 
-      <ul>
-      <% playlist.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% playlist.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= form.label :User%>
-    <%= form.select :user_id, @array,prompt: 'Selecciona un usuario' %>
+      <div class="field">
+        <%= form.label :User%>
+        <%= form.select :user_id, @array,prompt: 'Selecciona un usuario' %>
+      </div>
+
+      <div class="field">
+        <%= form.label :name %>
+        <%= form.text_field :name ,class: 'form-control-plaintext'%>
+      </div>
+
+      <div class="actions">
+        <%= form.submit class: 'btn btn-success'%>
+      </div>
+    <% end %>
   </div>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
