--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -12,3 +12,51 @@
 
 <%= link_to 'Edit', edit_playlist_path(@playlist) %> |
 <%= link_to 'Back', playlists_path %>
+
+
+
+<%= form_with(model:[@playlist,@song],local: true) do |form| %>
+
+
+  <div class="field">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
+
+  <div class="field">
+    <%= form.label :artist %>
+    <%= form.text_field :artist %>
+  </div>
+
+
+  <div class="actions">
+    <%= form.submit %>
+  </div>
+<% end %>
+
+
+<h1>Songs</h1>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Artist</th>
+      <th>Playlist</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @songs.each do |song| %>
+      <tr class= 'table-secondary'>
+        <td><%= song.name %></td>
+        <td><%= song.artist %></td>
+        <td><%= song.playlist.name %></td>
+        <td><%= link_to 'Show',  playlist_song_path(@playlist.id,song.id), class: 'btn btn-success' %></td>
+        <td><%= link_to 'Edit', edit_playlist_song_path(@playlist.id,song.id), class: 'btn btn-warning' %></td>
+        <td><%= link_to 'Destroy', playlist_song_path(@playlist.id,song.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
