--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,15 +1,5 @@
-<%= form_with(model: song, local: true) do |form| %>
-  <% if song.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(song.errors.count, "error") %> prohibited this song from being saved:</h2>
+<%= form_with(model: [playlist, song], local: true) do |form| %>
 
-      <ul>
-      <% song.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <div class="field">
     <%= form.label :name %>
@@ -21,10 +11,6 @@
     <%= form.text_field :artist %>
   </div>
 
-  <div class="field">
-    <%= form.label :playlist_id %>
-    <%= form.text_field :playlist_id %>
-  </div>
 
   <div class="actions">
     <%= form.submit %>
