--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Song</h1>
 
-<%= render 'form', song: @song %>
+<%= render 'form', {song: @song, playlist: @playlist} %>
 
-<%= link_to 'Show', @song %> |
-<%= link_to 'Back', songs_path %>
+<%= link_to 'Show',  playlist_song_path(@song.id)%> |
+<%= link_to 'Back', playlist_path(@playlist) %>
