--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
-
-<table>
+<%= link_to 'New User', new_user_path, class: 'btn btn-success' %>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
+      <th>Number of Playlists</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
-      <tr>
+      <tr class="table-secondary">
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class='text-center'><span class="badge badge-pill badge-info"><%= user.playlists.count  %></span></td>
+        <td><%= link_to 'Show', user, class: 'btn btn-success'%></td>
+        <td><%= link_to 'Edit', edit_user_path(user),class: 'btn btn-warning' %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
